Console command: edit <id> duration
Allows the user to change the duration of an entry instead of
specifying the end time manually — useful as a shorthand in place
of typing out the full date/time.

--- a/index.html
+++ b/index.html
@@ -506,7 +506,8 @@
         <p class="mb2">edit 3 description "Chasing dragon"</p>
         <p class="mb2">edit 24 start "YYYY MM DD HH MM SS"</p>
         <p class="mb2">edit 1 start "2017 12 15 13 30 14"</p>
-        <p>edit 5 end "2018 10 9 12 15 0"</p>
+        <p class="mb2">edit 5 end "2018 10 9 12 15 0"</p>
+        <p>edit 4 duration "90" <span class="o8">// sets duration in minutes</span></p>
       </div>
 
       <p class="mb3 m">To delete a log entry, use its ID:</p>
