Improve last entry table

--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
           <thead class="al">
             <tr>
               <th>ID</th>
-              <th>Start</th>
-              <th>End</th>
+              <th>Time</th>
               <th>Sector</th>
               <th>Project</th>
               <th>Description</th>
@@ -89,8 +88,7 @@
           <tbody>
             <tr>
               <td id="lastID"></td>
-              <td id="lastStart"></td>
-              <td id="lastEnd"></td>
+              <td id="lastTime"></td>
               <td id="lastSector"></td>
               <td id="lastProject"></td>
               <td id="lastDescription"></td>
