Added quit to Guide

--- a/index.html
+++ b/index.html
@@ -635,8 +635,13 @@
       </div>
 
       <p class="mb3 m">To export your data:</p>
-      <div class="bl pl3 m">
+      <div class="mb4 bl pl3 m">
         <p>export</p>
+      </div>
+
+	  <p class="mb3 m">To quit:</p>
+      <div class="bl pl3 m">
+        <p>quit</p>
       </div>
 
     </div>
