Added delete sector/project to Guide

--- a/index.html
+++ b/index.html
@@ -605,6 +605,12 @@
         <p>delete 15 <span class="o8">// deletes entry #15</span></p>
       </div>
 
+	  <p class="mb3 m">To delete a sector or project, use its name:</p>
+      <div class="mb4 bl pl3 m">
+        <p class="mb2">delete sector Code <span class="o8">// deletes all Code entries</span></p>
+		<p>delete project Fishing <span class="o8">// deletes all Fishing entries</span></p>
+      </div>
+
       <p class="mb3 m">To change the interface's background colour, set a hexadecimal colour or an HTML colour name of your choice:</p>
       <div class="mb4 bl pl3 m">
         <p class="mb2">set background #aabbcc</p>
@@ -676,7 +682,7 @@
       </div>
 
     </div>
-	
+
     <div class="nodrag mb5 mb0-l c6 pl4-l hf-l oya-l">
       <h2 class="mb3 f5">Log</h2>
       <p class="mb4 m">Log is a log and time-tracking system. Its primary purpose is to provide insight to how one's time is spent to optimise personal productivity and better manage time.</p>
