--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
     const Store = require('./js/store.js')
     const path = require('path')
     const timer = require('headless-work-timer')
-    const Aequirys = require('./utils/aequirys.min.js')
+    const Aequirys = require('aequirys')
     const Monocal = require('./utils/monocal.min.js')
     const Desamber = require('./utils/desamber.js')
 
